"ChangeLog"

2005-11-12	David Fang	<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-69:
	  Configuration support for byacc.  Details in src/ChangeLog.  


	* ARTXX-00-01-04-main-00-68-merged-parser-04-06:
	  Merged -parser-04 branch to make import mechanism work.
		Featuring completely reentrant lexers and parsers.  
		Validated against bison-1.35 -2.0, yacc, flex-2.5.4, -2.5.31.


2005-11-10	David Fang	<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-67:
	  Fixed support for bison-1.35 and made bison generated parser pure.
	  configure.ac: now responsible for generating
		src/parser/hackt-parse.yy from src/parser/hackt-parse.yy.in
		at configure time.  


2005-11-09	David Fang	<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-66-merged-parser-03-10:
	  Merged -parser-03 branch which includes tons of configuration
		and Makefile improvements in configure.ac and Makefile.am
		along with some useful helper scripts.  


2005-11-07	David Fang	<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-65-parser-03-05:
	  Moved around AUTO_IGNORE in Make.global so that it always
		includes CLEANFILES and DISTCLEANILES.  
		Cleaned up AUTO_IGNORE and EXTRA_DIST variables in Makefile.am.
	  Added config/config_subst.awk for convenient substitutions
		using config.status *during* config.status of 
		configure-generated files.  
	  configure.ac: now uses generated config_subst.awk.sh to perform
		substitutions during config.status operations.  


2005-11-06	David Fang	<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-65-parser-03-04:
	  configure now generates
		src/{cxx_version.h,lexer/lex_version.h,parser/yacc_version.h}


2005-11-03	David Fang	<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-65:
	  Renewed BOUNTY.  
	  Minor non-source fixes in scripts and Makefiles.  
	  configure.ac check for 'find'.


	* ARTXX-00-01-04-main-00-64-merged-cflat-03-02:
	  Merged -cflat-03 branch for added cflat functionality.  