@@ -6,7 +6,7 @@
 # NOTE: standard definition macros appear in "Make.stddef" and should
 # be included *before* the inclusion of this Makefile.  
 # NOTE: the for-loop syntax used requires that SHELL = sh, not bash.
-#	$Id: Make.global,v 1.8 2005/11/10 02:12:55 fang Exp $
+#	$Id: Make.global,v 1.9 2005/11/14 02:01:09 fang Exp $
 
 
 # automatically runs autotools (and recursively in dubdirectories)
@@ -61,7 +61,7 @@ AUTO_IGNORE += .gdb_history \
 # NOTE: local.cvsignore may be normal or automatically generated
 .cvsignore: local.cvsignore
 	@$(ECHO) $(AUTO_IGNORE) | $(SPACES_TO_NEWLINE) > $@.temp
-	$(CAT) $< $@.temp > $@
+	-$(CAT) $< $@.temp > $@
 	-$(RM) $@.temp
 
 # -k option allows continuation past directories with failed tests
