@@ -1,5 +1,5 @@
 # "scripts/Makefile.am"
-#	$Id: Makefile.am,v 1.2 2005/10/30 22:00:15 fang Exp $
+#	$Id: Makefile.am,v 1.3 2005/11/14 02:01:15 fang Exp $
 
 include $(top_srcdir)/Make.stddef
 
@@ -14,6 +14,7 @@ EXTRA_DIST += configure-gcc4.sh \
 	backup_repository.sh \
 	readable_gcc_errors.sed \
 	balance_indent.awk \
+	exhaust_check.sh \
 	tally_tests.awk
 
 
