@@ -1,5 +1,5 @@
 #!/bin/sh
-#	$Id: exhaust_check.sh,v 1.2 2005/11/13 20:21:10 fang Exp $
+#	$Id: exhaust_check.sh,v 1.3 2005/11/14 02:01:15 fang Exp $
 # "scripts/exhaust_check.sh"
 # exhaustively checks a ton of configurations on one platform
 # feel free to edit as necessary
@@ -13,21 +13,25 @@ make distclean
 for c in g++ g++-4
 do
 	# maybe even include byacc
-	for y in /usr/bin/yacc bison
+	for y in /usr/bin/yacc "bison -y"
 	do
 		for l in flex /sw/lib/flex/bin/flex
 		do
 echo "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%"
-			echo "Testing: CXX=\"ccache $c\" YACC=$y  LEX=$l"
+echo "Testing: CXX=\"ccache $c\" YACC=\"$y\"  LEX=\"$l\""
 echo "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%"
 	rm -rf build
 	mkdir -p build
-	if ( cd build && ../configure CXX="ccache $c" YACC=$y LEX=$l -C && \
+	if ( cd build && ../configure CXX="ccache $c" YACC="$y" LEX="$l" -C && \
 		make && make check.log )
 	then
-		echo "Passed: CXX=\"ccache $c\" YACC=$y  LEX=$l"
+echo "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%"
+		echo "Passed: CXX=\"ccache $c\" YACC=\"$y\"  LEX=\"$l\""
 	else
-		echo "Failed: CXX=\"ccache $c\" YACC=$y  LEX=$l"
+echo "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%"
+		echo "Failed: CXX=\"ccache $c\" YACC=\"$y\"  LEX=\"$l\""
+		# temporary
+		# exit 1
 	fi
 echo "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%"
 		done
